# camel_breed_classifier

./: .gitignore  DEPLOYMENT.md  setup_git_lfs.sh
fastapi_backend/: README.md  auth.py  database.py  gemini_service.py  main.py  ml_model.py  pyproject.toml  railway.toml  requirements.txt  schemas.py  vercel.json
fastapi_backend/routes/: auth_routes.py  feature_routes.py  prediction_routes.py
frontend/: .env.production  package-lock.json  package.json  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  AuthContext.js  api.js  index.css
frontend/src/components/: PrivateRoute.js
frontend/src/pages/: Auth.css  Classifier.css  Classifier.js  Login.js  Signup.js
