[project]
name = "camel-backend"
version = "0.0.1"
requires-python = ">=3.10,<3.11"

# All runtime deps go here (Vercel will ignore requirements.txt if this file exists)
dependencies = [
  "fastapi==0.104.1",
  "python-multipart==0.0.6",
  "python-jose[cryptography]==3.5.0",
  "passlib==1.7.4",
  "bcrypt==4.0.1",
  "sqlalchemy==2.0.23",
  "pydantic==2.5.0",
  "pydantic-settings==2.1.0",
  "python-dotenv==1.0.0",
  "numpy==1.26.4",
  "Pillow==10.1.0",
  "opencv-python-headless==4.10.0.84",
  "torch==2.4.1+cpu",
  "torchvision==0.19.1+cpu"
]

[tool.uv]
# This is the TOML way to add the PyTorch CPU wheel index
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
