[project]
name = "camel-backend"
version = "0.0.1"
requires-python = ">=3.11,<3.12"

dependencies = [
  "fastapi==0.104.1",
  "python-multipart==0.0.6",
  "python-jose[cryptography]==3.5.0",
  "passlib==1.7.4",
  "bcrypt==4.0.1",
  "sqlalchemy==2.0.23",
  "pydantic==2.5.0",
  "pydantic-settings==2.1.0",
  "python-dotenv==1.0.0",
  "numpy==1.26.4",
  "Pillow==10.1.0",
  # remove if you don’t really need OpenCV in prod
  "opencv-python-headless==4.10.0.84",
  "torch==2.4.1+cpu",
  "torchvision==0.19.1+cpu"
]

[tool.uv]
# Make PyPI the primary index and add the PyTorch CPU wheels as extra
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
# Allow uv to choose versions across all indexes, not just the first one that lists a package
index-strategy = "unsafe-best-match"
